Fix: Dockerfile alpine-router

--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine:latest
 
-RUN apk install fish
+RUN apk update && apk add fish
+RUN ln -s /usr/bin/fish /bin/fish
+
+RUN apk update && apk add bridge-utils
 
 CMD [ "/bin/fish" ]
