Feat: Adds Net-Tools

--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:latest
 RUN apk update && apk add fish
 RUN ln -s /usr/bin/fish /bin/fish
 
-RUN apk update && apk add bridge-utils
+RUN apk update && apk add bridge-utils net-tools
 
 VOLUME [ "/etc" ]
 
