--- a/switch/Dockerfile
+++ b/switch/Dockerfile
@@ -5,6 +5,8 @@ RUN ln -s /usr/bin/fish /bin/fish
 
 RUN apk update && apk add bridge-utils net-tools
 
+RUN apk add neovim
+
 VOLUME [ "/etc" ]
 
 CMD [ "/bin/fish" ]
